--- a/ereuse_devicehub/dummy/files/real-hp-quad-core.snapshot.11.yaml
+++ b/ereuse_devicehub/dummy/files/real-hp-quad-core.snapshot.11.yaml
@@ -83,7 +83,7 @@
       "elapsed": 0,
       "type": "TestDataStorage",
       "status": "Unspecified Error. Self-test not started.",
-      "error": true,
+      "severity": "Error",
       "length": "Short"
     }
     ]
