--- a/ereuse_devicehub/dummy/files/workbench-server-1.snapshot.yaml
+++ b/ereuse_devicehub/dummy/files/workbench-server-1.snapshot.yaml
@@ -64,7 +64,7 @@ components:
     elapsed: 21
   - type: TestDataStorage
     elapsed: 233
-    error: False
+    severity: Info
     status: Completed without error
     length: Short
     lifetime: 99
