--- a/tests/files/erase-sectors-2-hdd.snapshot.yaml
+++ b/tests/files/erase-sectors-2-hdd.snapshot.yaml
@@ -69,12 +69,12 @@
       {
         "endTime": "2018-07-13T11:54:55.096491",
         "type": "StepRandom",
-        "error": false,
+        "severity": "Info",
         "startTime": "2018-07-13T10:52:45.092981"
       }
       ],
       "type": "EraseBasic",
-      "error": false,
+      "severity": "Info",
       "zeros": false,
       "startTime": "2018-07-13T10:52:45.092612"
     },
@@ -84,7 +84,7 @@
       "elapsed": 131,
       "length": "Short",
       "offlineUncorrectable": 1,
-      "error": true,
+      "severity": "Error",
       "currentPendingSectorCount": 1,
       "powerCycleCount": 1253,
       "reallocatedSectorCount": 15,
@@ -107,12 +107,12 @@
       {
         "endTime": "2018-07-13T12:55:47.326835",
         "type": "StepRandom",
-        "error": false,
+        "severity": "Info",
         "startTime": "2018-07-13T11:54:55.100925"
       }
       ],
       "type": "EraseBasic",
-      "error": false,
+      "severity": "Info",
       "zeros": false,
       "startTime": "2018-07-13T11:54:55.100667"
     },
@@ -122,7 +122,7 @@
       "elapsed": 115,
       "length": "Short",
       "offlineUncorrectable": 0,
-      "error": false,
+      "severity": "Info",
       "currentPendingSectorCount": 0,
       "powerCycleCount": 1956,
       "reallocatedSectorCount": 0,
