--- a/tests/files/workbench-server-3.erase.yaml
+++ b/tests/files/workbench-server-3.erase.yaml
@@ -7,7 +7,7 @@
 # All numbers are invented
 
 type: 'EraseSectors'
-error: False
+severity: Info
 # snapshot: None fulfill!
 # device: None fulfill!
 zeros: False
@@ -17,4 +17,4 @@ steps:
 - type: 'StepRandom'
   startTime: '2018-01-01T10:10:10'
   endTime: '2018-01-01T12:10:10'
-  error: False
+  severity: Info
