--- a/tests/files/workbench-server-4.install.yaml
+++ b/tests/files/workbench-server-4.install.yaml
@@ -8,7 +8,7 @@
 
 type: 'Install'
 elapsed: 420
-error: False
+severity: Info
 # snapshot: None fulfill!
 # device: None fulfill!
 name: 'LinuxMint 18.01 32b'
