--- a/ereuse_devicehub/dummy/files/pc-laudem.snapshot.11.yaml
+++ b/ereuse_devicehub/dummy/files/pc-laudem.snapshot.11.yaml
@@ -128,6 +128,10 @@
     {
       "id": "tagA-secondary",
       "type": "Tag"
+    },
+    {
+      "id": "DT-BRRAB",
+      "type": "Tag"
     }
     ],
     "type": "Desktop"
