--- a/examples/apache.conf
+++ b/examples/apache.conf
@@ -8,7 +8,7 @@ Define appdir /home/devicetag/sites/${servername}/source/
 # The path where the app directory is. Apache must have access to this folder.
 Define wsgipath ${appdir}/wsgi.wsgi
 # The location of the .wsgi file
-Define pyvenv ${appdir}/venv/
+Define pyvenv ${appdir}../venv/
 # The path where the virtual environment is (the folder containing bin/activate)
 
 <VirtualHost *:80>
