Facilitate installation for dispatcher

--- a/examples/apache.conf
+++ b/examples/apache.conf
@@ -6,7 +6,7 @@ Define servername api.devicetag.io
 # The domain used to access the server
 Define appdir /home/devicetag/sites/${servername}/source/
 # The path where the app directory is. Apache must have access to this folder.
-Define wsgipath ${appdir}/wsgi.wsgi
+Define wsgipath ${appdir}/wsgi.py
 # The location of the .wsgi file
 Define pyvenv ${appdir}../venv/
 # The path where the virtual environment is (the folder containing bin/activate)
